[package]
name = "chemicli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.17", features = ["derive"] }
comfy-table = "7.1.0"
mendeleev = "0.8.0"
num = "0.4.1"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
